2010-10-04  Omair Majid  <omajid@redhat.com>

	* /netx/net/sourceforge/jnlp/PluginBridge.java
	Do not shadow specVersion and fileVersion variables by redeclaring them.
	(PluginBridge): Initialize specVersion and fileVersion.

2010-10-04  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/resources/Messages.properties:
	Add AFileOnTheMachine, change SFileReadAccess and SFileWriteAccess.
	* netx/net/sourceforge/jnlp/security/AccessWarningPane.java:
	(addComponents): Add the filename to the message.
	* netx/net/sourceforge/jnlp/services/XExtendedService.java:
	(openFile): Pass along the filename to ServiceUtil.checkAccess.
	* netx/net/sourceforge/jnlp/util/FileUtils.java:
	(displayablePath): New method.
	(displayablePath): Likewise.

2010-10-01  Andrew Su  <asu@redhat.com>

	* PluginAppletViewer.java:
	(createPanel): Changed call to reframe with handle 0 to the handle
	passed in.
	(handleMessage): Removed the redundant reframe from initialization.

2010-09-29  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(extract-openjdk): Add missing endif.

2010-09-29  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(download-openjdk): Clone OpenJDK to openjdk.hg
	not openjdk.
	(clean-download-openjdk): Remove openjdk.hg.
	(extract-openjdk): Handle the ENABLE_HG case by
	making a hardlinked copy of openjdk.hg

2010-09-29  Deepak Bhole <dbhole@redhat.com>

	Fixed PR519 (patch from dnietoc@gmail.com).
	* plugin/icedteanp/IcedTeaNPPlugin.cc: Have ITNP_NewStream return
	NPERR_GENERIC_ERROR instead of NPERR_NO_ERROR.
	* NEWS: Updated accordingly.

2010-09-29  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(add-tzdata-support-debug): Depend on icedtea-debug, not icedtea.
	(add-tzdata-support-ecj): Depend on icedtea-ecj, not icedtea.

2010-09-24  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(.PHONY): Add new clean targets.
	(icedtea-against-icedtea): Don't depend on
	bootstrap-directory-symlink, icedtea already does.