@@ -19,6 +19,7 @@ New in release 1.10 (2010-XX-XX):
 * Netx
   - A new man page for javaws.
 * Plugin  
+  - PR554: System.err writes content two times
   - PR556: Applet initialization code is prone to race conditions
   - PR557: Applet opens in a separate window if tab is closed when the applet loads
   - PR519: 100% CPU usage when displaying applets in Webkit based browsers
