@@ -1,3 +1,10 @@
+2010-10-04  Paul Ebermann  <Paul-Ebermann@gmx.de>
+	        Omair Majid <omajid@redhat.com>
+
+	Fixes PR554.
+	* plugin/icedteanp/java/sun/applet/PluginMain.java
+	(write): Remove method.
+
 2010-10-04  Omair Majid  <omajid@redhat.com>
 
 	* /netx/net/sourceforge/jnlp/PluginBridge.java
